--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-cbbdd1df-e008-420c-b78d-291625353043;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMvcContext": "Data Source=database.db;"
   }
 }
